# goblin-camp

./: .editorconfig  .gitconfig  .gitignore  .markdownlint.json  AGENT_QUICK_REFERENCE.md  CHANGELOG.md  CI_IMPROVEMENTS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.emojivision  Dockerfile.snek  LICENSE-MIT  README.md  WORKSPACE_OPTIMIZATION_SUMMARY.md  agent-dev.sh  deny.old.toml  deny.toml  dev.sh  docker-compose.yml  pr_175.diff  pr_175.files.json  pr_175.json  pr_180.diff  pr_180.files.json  pr_180.json  pr_196.diff  pr_196.files.json  pr_196.json  pr_197.diff  pr_197.files.json  pr_197.json  pr_198.diff  pr_198.files.json  pr_198.json  pr_226.diff  pr_226.files.json  pr_226.json  pr_231.diff  pr_231.files.json  (+7 more)
.claude/: agent-workspace.md
.github/: README-MCP.md  ci-config.yml  copilot-instructions.md  mcp-config-enhanced.json  mcp-config-minimal.json  mcp-servers.json  mcp-servers.md  pull_request_template.md
crates/gc_cli/: Cargo.toml
crates/gc_cli/src/: main.rs
crates/gc_core/: Cargo.toml
crates/gc_core/benches/: fov.rs  path_aStar.rs
crates/gc_core/resources/: recipes.json
crates/gc_core/src/: bootstrap.rs  components.rs  designations.rs  fov.rs  inventory.rs  jobs.rs  lib.rs  mapgen.rs  path.rs  recipes.rs  save.rs  stockpiles.rs  systems.rs  world.rs
crates/gc_core/tests/: designation_lifecycle_tests.rs  determinism_tests.rs  inventory_tests.rs  lib_tests.rs  m0_core_tests.rs  m2_job_execution_tests.rs  mining_item_haul_tests.rs  mining_tests.rs  pathfinding_advanced_tests.rs  recipe_registry_tests.rs  stockpile_tests.rs  systems_tests.rs  visibility_and_cache_tests.rs
crates/gc_tui/: Cargo.toml
crates/gc_tui/src/: lib.rs
crates/gc_tui/tests/: snapshot_render.rs
crates/gc_tui/tests/__snapshots__/: tui_20x10_seed42_no_vis.txt  tui_20x10_seed42_with_vis.txt
docs/: Gemfile  README.md  _config.yml  index.md  roadmap.md
emojivision/: CLAUDE.md  README.md  index.html
scripts/: create_graphics_epic.sh  fix-nested-list-indents.sh  mdlint.sh  normalize_graphics_issues.sh  validate-pr.sh
snek/: .babelrc  .eslintrc.js  .gitignore  (+17 more)
(+102 files in other folders)
