[package]
name = "gc_tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for Goblin Camp using ratatui + crossterm"
license = "MIT OR Apache-2.0"
authors = ["Goblin Camp Contributors"]

[dependencies]
anyhow = "1.0"
ratatui = { version = "0.29", default-features = true, features = ["crossterm"] }
crossterm = "0.29"
bevy_ecs = "0.14"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[dependencies.gc_core]
path = "../gc_core"
